# tuple-service

./: CMakeLists.txt  README.md  client.c  commons.c  commons.h
keys/: keys.c  keys.h
server/: server.c  server_messaging.c  server_messaging.h  tuple_manager.c  tuple_manager.h
